# games

./: 0-AI-MANIFEST.a2ml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.adoc  ROADMAP.adoc  SECURITY.md  TOPOLOGY.md
dicti0nary-attack/: .dockerignore  .editorconfig  CHANGELOG.adoc  CLAUDE.adoc  CONTRIBUTING.adoc  Cargo.toml  Chapel.toml  Containerfile  MAINTAINERS.adoc  Mustfile.epx  README.adoc  RSR_SUMMARY.adoc  SECURITY.md  deno.json  justfile  podman-compose.yml  rescript.json
dicti0nary-attack/.clusterfuzzlite/: Dockerfile  project.yaml
dicti0nary-attack/.github/: REPO_CONFIG.md  dependabot.yml  pull_request_template.md
dicti0nary-attack/.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
dicti0nary-attack/.github/workflows/: ci.yml  codeql.yml  makefile-blocker.yml
dicti0nary-attack/.rsr/: README.adoc  metadata.yml
dicti0nary-attack/config/: README.adoc  advanced.yaml  default.yaml  dicti0nary.ncl
dicti0nary-attack/crates/core/: Cargo.toml
dicti0nary-attack/crates/crackers/: Cargo.toml
dicti0nary-attack/crates/generators/: Cargo.toml
dicti0nary-attack/docs/: API.adoc  API.md  CITATIONS.adoc  PLUGINS.adoc  PLUGINS.md  USAGE.adoc  USAGE.md
dicti0nary-attack/fuzz/: Cargo.toml
dicti0nary-attack/fuzz/fuzz_targets/: fuzz_main.rs
dicti0nary-attack/scripts/: setup-1000langs.sh
dicti0nary-attack/src/: dicti0nary.chpl  main.rs
dicti0nary-attack/src/crackers/: HashCracker.chpl
dicti0nary-attack/src/generators/: Leetspeak.chpl  Markov.chpl  Pattern.chpl  Phonetic.chpl  Random.chpl
dicti0nary-attack/tests/: run_tests.sh  test_markov.chpl  test_phonetic.chpl  test_random.chpl
dicti0nary-attack/web/: index.html
dicti0nary-attack/web/src/: App.res  Dom.res  Generators.res  Hash.res  Main.res  Notification.res  WasmBindings.res  WasmLoader.res
phantom-metal-taste/src/core/: Cargo.toml
(+276 files in other folders)
